Infrastructure: Updates to work with Java 17, Play 2.8